Add delete user request
